PartController and code cleanup